--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ em
     font-style: normal;
     font-weight: bold;
 }
+#map
+{
+    height: 400px;
+    width: 400px;
+}
 
 @media screen and (max-width: 1280px)
 {
