HALLELUIA! Flask works, js can send user's question to backend

--- a/grandpy/templates/index.html
+++ b/grandpy/templates/index.html
@@ -16,7 +16,7 @@
         <p id = "le_papy_robot">Le papy robot</p>
     </header>
     <section>
-        <form id = 'form' method = 'post'>
+        <form id = 'form'>
             <label for= "question">Posez votre question à GrandPy</label><br/>
             <input name="question" id="question"></input><br/>
             <input type="submit" value="Envoyer" id="button"/>
