IMPROVED: app now displays succesive questions, map and address

--- a/grandpy/templates/index.html
+++ b/grandpy/templates/index.html
@@ -22,8 +22,11 @@
             <input type="submit" value="Envoyer" id="button"/>
         </form>
 
+        <div id= main_display>
+        <p id = "display">Your question to GrandPy:<br></p>
         <div id = "map"></div>
-        
+        <p id = "address"></p>
+        </div>
     </section>
     <footer>
         <a href = "https://github.com/Vincent74230/Projet_7" title = "Lien vers le repo github du Projet_7" target = "_blank">
