--- a/grandpy/static/style.css
+++ b/grandpy/static/style.css
@@ -62,6 +62,20 @@ em
     height: 400px;
     width: 400px;
 }
+#display
+{
+    height: 400px;
+    width: 400px;
+}
+#address
+{
+    height: 400px;
+    width: 400px;
+}
+#main_display
+{
+    display : flex;
+}
 
 @media screen and (max-width: 1280px)
 {
