--- a/grandpy/static/style.css
+++ b/grandpy/static/style.css
@@ -42,16 +42,10 @@ span
 {
     font-style: bold;
 }
-textarea
-{
-    width: 350px;
-    height: 200px;
-}
 form
 {
     text-align:center;
 }
-
 em
 {
     font-style: normal;
@@ -59,25 +53,59 @@ em
 }
 #map
 {
-    height: 400px;
-    width: 400px;
-}
-#display
-{
-    height: 400px;
-    width: 400px;
-}
-#address
-{
-    height: 400px;
-    width: 400px;
-    overflow: auto;
+    height: 500px;
+    width: 500px;
 }
 #main_display
 {
-    display : flex;
+    display: flex;
+    align-items: flex-end;
 }
+#speechBox
+{
+    display: flex;
+    flex-direction: column;
+    padding: 2px 2px 2px 2px;
+    min-width: 800px;
+    height: auto;
+}
+.userSpeechBox
+{
+    display: flex;
+    justify-content: flex-start;
+    height: auto;
+    padding: 2px 2px 2px 2px;
+}
+.userQuestion
+{
+    border: 1px solid black;
+    max-width: 400px;
+    height: auto;
+    padding: 4px 4px 4px 4px;
+    font-family: verdana, arial, sans-serif;
+    font-size: 1em;
+    border-radius: 10px/20px;
+    background-color: #E8EBEE;
+}
+.grandPySpeechBox
+{
+    display: flex;
+    justify-content: flex-end;
+    height: auto;
+    padding: 2px 2px 2px 2px;
 
+}
+.grandPyAnswer
+{
+    border: 1px solid black;
+    max-width: 400px;
+    height: auto;
+    padding: 4px 4px 4px 4px;
+    font-family: verdana, arial, sans-serif;
+    font-size: 1em;
+    border-radius: 10px/20px;
+    background-color: #25D366;
+}
 @media screen and (max-width: 1280px)
 {
     header
@@ -92,6 +120,7 @@ em
     {
         display : none;
     }
+
     
     footer
     {
