--- a/grandpy/templates/index.html
+++ b/grandpy/templates/index.html
@@ -36,6 +36,7 @@
         DA Python/Django</p>
     </footer>
 <script src="{{url_for('static', filename = 'dynamic.js')}}" > </script>
+<script src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBvjVqsDCXUG3xGNdZai3lQBkekuMbUAfk"></script>
 </body>
 
 </html>
